# WorkspaceEditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Buffer.h  Command.h  CommandHistory.h  DeleteCommand.h  Document.h  DocumentFactory.h  EditorException.h  EditorSession.h  FileManager.h  InsertCommand.h  NewLineCommand.h  Observer.h  Repository.h  TextDocument.h  ToDoDocument.h  ToggleCheckboxCommand.h  UI.h  UIObserver.h  Utils.h
src/: Buffer.cpp  CommandHistory.cpp  DeleteCommand.cpp  Document.cpp  DocumentFactory.cpp  EditorSession.cpp  FileManager.cpp  InsertCommand.cpp  NewLineCommand.cpp  Observer.cpp  TextDocument.cpp  ToDoDocument.cpp  ToggleCheckboxCommand.cpp  UI.cpp
tests/: testBuffer.cpp  testCommand.cpp  testRepository.cpp
